infra/profiles-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: profiles
  labels:
    istio-injection: enabled
