infra/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: profile
  name: profile
  namespace: profiles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - image: anandxmj/profile-service:V1.1
        name: profile-service
