infra/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: profile
  name: profile
  namespace: profiles
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: profile
