infra/profile-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: profile
  namespace: profiles
  labels:
    app: profile
spec:
  hosts:
  - "*"
  gateways:
  - profile
  http:
  - match:
    - uri:
        prefix: /profile
    route:
    - destination:
        host: profile.profiles.svc.cluster.local
        port: 
          number: 5000
