infra/profile-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: profile-authorization-policy
  namespace: profiles
spec:
  selector:
    matchLabels:
      app: profile
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["*"]
